crates/fossil-codegen/tests/snapshots/codegen_ops__parquet_source.snap
---
source: crates/fossil-codegen/tests/codegen_ops.rs
expression: sql
---
CREATE VIEW a AS
SELECT * FROM read_parquet('a.parquet');
COPY (
    SELECT
        a.iri AS subject,
        'https://example.org/name' AS predicate,
        a.name AS object
    FROM a
) TO 'output.parquet' (FORMAT PARQUET);
